Fixed text wrapping on display / refactored

--- a/styles.css
+++ b/styles.css
@@ -3,29 +3,28 @@ body {
    flex-direction: column;
    justify-content: center;
    align-items: center;
-   height: 500px;
+   height: 550px;
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-
-
 
 .buttons {
     display: grid;
-    height: 170px;
-    width: 160px;
-    grid-template-columns: repeat(4, 20px);
-    grid-template-rows: repeat(4, 20px);
-    grid-column-gap: 20px;
-    grid-row-gap: 15px;
+    height: 200px;
+    width: 170px;
+    grid-template-columns: repeat(4, 40px);
+    grid-template-rows: repeat(4, 40px);
+    grid-column-gap: 1px;
+    grid-row-gap: 1px;
     background-color: #dae6f2;
     border-style: solid;
     border-width: 1px;
-    border-radius: 5px;
     border-color: #b5d6f5;
     padding: 10px;
+    padding-right: inherit;
 } 
 
 .number, .operator, #clearBtn, #equal {
-    height: 25px;
+    height: 30px;
     width: 35px;
     padding: 2px 8px;
     border: 1px solid #F3F3F3;
@@ -33,8 +32,8 @@ body {
     -webkit-box-shadow: 0 0 0 1px #707070;
     box-shadow: 0 0 0 1px #707070;
     -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
     border-radius: 1px;
+    -webkit-border-radius: 3px;
     background: -moz-linear-gradient(top, #F2F2F2 0%, #EBEBEB 50%, #DDDDDD 51%, #CFCFCF 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0,#F2F2F2), color-stop(0.5,#EBEBEB),color-stop(0.51,#DDDDDD),color-stop(1,#CFCFCF));
     background: linear-gradient(top, #F2F2F2 0%, #EBEBEB 50%, #DDDDDD 51%, #CFCFCF 100%);
@@ -62,5 +61,21 @@ body {
     box-shadow: 0 0 0 1px #2C628B;
     background: -moz-linear-gradient(top, #E5F4FC 0%, #C4E5F6 50%, #98D1EF 51%, #68B3DB 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0,#E5F4FC), color-stop(0.5,#C4E5F6),color-stop(0.51,#98D1EF),color-stop(1,#68B3DB));
+}
+
+.display {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #e8f0fb;
+    border-color: #b5d6f5;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 1px;
+    padding: 10px 70px 10px 70px;
+    height: 35px;
+    width: 40px;
+    margin-bottom: 5px;
+    white-space: nowrap;
 }
 
